[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[project]
name = "regex_replacer"
version = "0.1.0"
authors = [{name = "GAlexander", email = "g.alexander.box@gmail.com"}]
description = "Simple class for replace test with regex. Support scikit-learn transformer interface."
readme = "README.md"
requires-python = ">=3.7, <3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
[project.urls]
"Homepage" = "https://github.com/g-alexander/regex_replacer"
"Bug Tracker" = "https://github.com/g-alexander/regex_replacer/issues"
